# ops-swarm

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
config/: settings.py
config/rails/: config.yml  security.co
src/: graph.py  mcp_client.py  mcp_server.py  state.py
