[project]
name = "ops-swarm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.5",
    "langchain>=1.2.9",
    "langchain-groq>=1.1.2",
    "langgraph>=1.0.8",
    "mcp[cli]>=1.26.0",
    "nemoguardrails>=0.20.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "streamlit>=1.54.0",
    "uvicorn>=0.40.0",
]
